# RLox

./: .gitignore  Cargo.toml  README.md  test.lox  test.ox
.github/workflows/: windows.yml
crates/rlox-lsp/: Cargo.toml
crates/rlox-lsp/src/: documents.rs  lib.rs  main.rs  text_index.rs
crates/rlox-lsp/tests/: documents.rs  features.rs  lifecycle.rs  stdio.rs
crates/rlox-lsp/tests/support/: mod.rs
crates/rlox-protocol/: Cargo.toml
crates/rlox-protocol/src/: codec.rs  diagnostic.rs  lib.rs  types.rs  validation.rs  wire.rs
crates/rlox-protocol/tests/: protocol.rs
scripts/: package-windows.ps1
src/: analysis.rs  chunk.rs  compiler.rs  debug.rs  debug_info.rs  debug_worker.rs  diagnostic.rs  lib.rs  main.rs  object.rs  runtime_host.rs  scanner.rs  session.rs  snapshot.rs  source.rs  table.rs  value.rs  vm.rs
tests/: analysis.rs  cli_contract.rs  debug_execution.rs  debug_snapshots.rs  diagnostics.rs  library_api.rs  serde_contract.rs  symbol_analysis.rs  worker_process.rs
