[package]
name = "rlox"
version = "0.1.0"
edition = "2024"
default-run = "rlox"

[workspace]
members = [".", "crates/oxide-ide", "crates/rlox-lsp", "crates/rlox-protocol"]
default-members = [".", "crates/oxide-ide", "crates/rlox-lsp", "crates/rlox-protocol"]
resolver = "3"

[workspace.dependencies]
lsp-server = "=0.10.0"
lsp-types = "=0.97.0"
serde = { version = "=1.0.228", features = ["derive", "rc"] }
serde_json = "=1.0.150"

[dependencies]
rlox-protocol = { path = "crates/rlox-protocol" }
serde.workspace = true

[dev-dependencies]
rlox-protocol = { path = "crates/rlox-protocol" }
serde_json.workspace = true

[features]
debug_print_code = []
debug_trace_execution = []
debug_print_tokens = []
debug_stress_gc = []
debug_log_gc = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true
